--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 <section id="section-intro" class="active">
     <div class="bg-layer" style="background-image: url('https://placehold.co/1920x1080/111/333?text=Intro+BG');"></div>
     <div class="container" style="text-align: center; margin-top: 10vh;">
-        <img src="https://placehold.co/800x200/000/fff?text=TITLE+LOGO" alt="Logo" style="margin-bottom: 20px; border: 1px solid #fff; background: rgba(0,0,0,0.5);">
+        <img src="https://github.com/Zerattel/hsrp-character-builder/blob/main/hsrp-logo.png?raw=true" alt="Logo" style="margin-bottom: 20px; border: 1px solid #fff; background: rgba(0,0,0,0.5);">
         
         <h2>Добро пожаловать в Систему</h2>
         <p style="max-width: 600px; margin: 0 auto 30px auto;">
